# autocorrect

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SKILL.md  justfile  package.json  tsconfig.json  tsdown.config.ts
.cargo/: config.toml
assets/: healthcare.txt
docs/: index.html  package.json  vite.config.ts
docs/src/: App.tsx  index.css  main.tsx  routeTree.ts  theme.tsx
docs/src/components/: CodeBlock.tsx  ComparisonTable.tsx  LiveDemo.tsx  Sidebar.tsx
docs/src/data/: examples.ts
docs/src/pages/: APIDocs.tsx  BuildGuide.tsx  ComposeDocs.tsx  CoreAlgorithm.tsx  FlutterDocs.tsx  Home.tsx  ReactDocs.tsx  SolidDocs.tsx  SwiftDocs.tsx
engine/: autocorrect.rs  tech.txt
web_packages/react/: index-react.ts  index.ts  package.json
web_packages/solid/: index.ts  package.json  solidHook.ts
web_packages/wasm/: autocorrect.ts  index.ts  package.json
