[package]
name = "autocorrect"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "autocorrect"
path = "engine/autocorrect.rs"

[features]
default = []
jni = ["dep:jni"]

[dependencies]
jni = { version = "0.21", optional = true, default-features = false }

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
